force-app/main/default/objects/AI_Fraud_Analysis__c/AI_Fraud_Analysis__c.object-meta.xml
<CustomObject>
    <label>AI Fraud Analysis</label>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>AI Fraud Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Fraud Analyses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>