force-app/main/default/objects/AI_Fraud_Analysis__c/fields/Fraud_Case__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Case__c</fullName>
    <label>Fraud Case</label>
    <referenceTo>Fraud_Case__c</referenceTo>
    <relationshipLabel>AI Fraud Analyses</relationshipLabel>
    <relationshipName>AI_Fraud_Analyses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>