force-app/main/default/objects/AI_Fraud_Analysis__c/fields/User_Feedback__c.field-meta.xml
<CustomField>
    <fullName>User_Feedback__c</fullName>
    <label>User Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Needs More Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>